--- a/login2.0.css
+++ b/login2.0.css
@@ -2,7 +2,7 @@ html{
     margin: 0;
     padding: 0;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background: url("headbackimglarge.jpg") no-repeat;
+    background: url("Images/headbackimglarge.jpg") no-repeat;
     background-size: cover;
     height: 100%;
 }
