--- a/mapStyle1.css
+++ b/mapStyle1.css
@@ -1,4 +1,7 @@
-*{box-sizing: border-box;}
+*{
+	margin: 0;
+	padding: 0 1px;
+	box-sizing: border-box;}
 @media screen and (max-width: 1295px){
 	.sideNewsbar{
 		display: none;
@@ -73,7 +76,33 @@ a{
 	background-color: #333;
 	color: #d27606;
 }
-
+.ulmenu{
+	display: none;
+	border-radius: 10px;
+	position: sticky;
+	top: 0;
+	z-index: 4;
+	background-color: #83c7ec;
+}
+.ulmenu ul{
+	list-style-type: none;
+	display: flex;
+	flex-direction: row;
+}
+.ulmenu ul li{
+	display: block;
+	padding: 10px;
+}
+.ulmenu ul li:hover{
+	cursor: pointer;
+}
+.ulmenu ul li a{
+	font-size: 1.7rem;
+	text-decoration: none;
+}
+.ulmenu ul li a:hover{
+	color: #06080b;
+}
 
 .main{
 	display: flex;
@@ -184,5 +213,26 @@ img{
 	}
 	.special{
 		display: block;
+	}
+}
+
+@media screen and (max-width:769px){
+	.sidebar{
+		display: none;
+	}
+	.main{
+		width: 100%;
+		margin: 0;
+	}
+	iframe{
+		height: 50vh;
+	}
+	img{
+		min-height: 50vh;
+		max-height: 50vh;
+	}
+	.ulmenu{
+		display: flex;
+		justify-content: space-around;
 	}
 }
